--- a/robot_math/CMakeLists.txt
+++ b/robot_math/CMakeLists.txt
@@ -55,9 +55,10 @@ install(
 
 
 add_executable(test_robot_math 
-                  src/test.cpp)
+                  test/main.cpp)
 
 target_compile_features(test_robot_math PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+
 target_include_directories(test_robot_math PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
